--- a/src/app/components/PortfolioTable.module.css
+++ b/src/app/components/PortfolioTable.module.css
@@ -5,7 +5,7 @@
   margin-left: 5%;
   text-align: center;
   border-spacing: 0;
-  padding-bottom: 40px;
+  padding-bottom: 5%;
 }
 .table tr th{
   background-color: rgba(0, 0, 0, 0.2);
